# flir-activity-monitor

./: .gitignore  CMakeLists.txt  battery_monitor.cpp  battery_monitor.hpp  input_listener.cpp  input_listener.hpp  input_monitor.cpp  input_monitor.hpp  log.h  log.hpp  logger.cpp  logger.hpp  main.cpp  network_monitor.cpp  network_monitor.hpp  rolling_window.hpp  settings_handler.cpp  settings_handler.hpp  state_handler.cpp  state_handler.hpp  types.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_rolling_window.cpp  test_state_handler.cpp
tools/: Dockerfile  run_tests.sh
